--- a/index.html
+++ b/index.html
@@ -568,12 +568,12 @@
       </div>
       <div class="contact-info" data-aos="fade-left">
         <h3 style="font-size:1.8rem;">✨ hubungi</h3>
-        <p><i class="fas fa-envelope" style="color:#3b82f6;"></i> ahmad.husain@umm.ac.id</p>
+        <p><i class="fas fa-envelope" style="color:#3b82f6;"></i> ahmad.ummgl@gmail.com</p>
         <p><i class="fas fa-phone-alt" style="color:#3b82f6;"></i> +62 812-3456-7890</p>
         <div class="social-links">
-          <a href="#"><i class="fab fa-github"></i></a>
-          <a href="#"><i class="fab fa-linkedin"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="https://github.com/ahmadxbyte"><i class="fab fa-github"></i></a>
+          <a href="https://wa.me/089509901360"><i class="fab fa-whatsapp"></i></a>
+          <a href="https://www.instagram.com/ahmadhusain_98/"><i class="fab fa-instagram"></i></a>
         </div>
         <p style="font-style:italic; margin-top:1.5rem;">"Terima kasih! pesan anda telah saya terima."</p>
       </div>
