--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
   <section id="home" class="hero">
     <div class="hero-content" data-aos="fade-up" data-aos-duration="1200">
       <div class="avatar-wrapper">
-        <img src="https://ui-avatars.com/api/?name=Ahmad+Husain+Ardiansyah&size=300&length=2&background=3b82f6&color=fff&bold=true" alt="Ahmad Husain">
+        <img src="./profile.png" alt="Ahmad Husain">
       </div>
       <h1>Ahmad Husain <span>Ardiansyah</span></h1>
       <p>Web Developer · Full Stack Enthusiast · Tim Developer & Implementator</p>
