--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
           <div class="form-group"><input type="text" placeholder="Nama" id="username" name="username"></div>
           <div class="form-group"><input type="email" placeholder="Email" id="email" name="email"></div>
           <div class="form-group"><textarea rows="4" placeholder="Pesan..." name="message" id="message"></textarea></div>
-          <button type="submit" class="submit-btn"><i class="fas fa-paper-plane"></i> Kirim</button>
+          <button type="submit" class="submit-btn btn-send"><i class="fas fa-paper-plane"></i> Kirim</button>
         </form>
       </div>
       <div class="contact-info" data-aos="fade-left">
@@ -600,24 +600,18 @@
     
       const scriptURL = "https://script.google.com/macros/s/AKfycbwqplUxSjvwnIsq02vtjCnsuPstgbTT_Xj4HDsNK5RjZhkKppSnC37V6LSbIpS66F0/exec";
       const form = document.forms["my-portfolio-contact"];
-
       const btnSend = document.querySelector(".btn-send");
-      const btnLoading = document.querySelector(".btn-loading");
-      const myAlert = document.querySelector(".my-alert");
 
       form.addEventListener("submit", (e) => {
         e.preventDefault();
         // ketika tombol send di klik
         // tampilkan tombol loading, hilangkan tombol send
-        btnLoading.classList.toggle("d-none");
         btnSend.classList.toggle("d-none");
         fetch(scriptURL, { method: "POST", body: new FormData(form) })
           .then((response) => {
             // tampilkan tombol Send, hilangkan tombol Loading
-            btnLoading.classList.toggle("d-none");
             btnSend.classList.toggle("d-none");
             // tampilkan alert
-            myAlert.classList.toggle("d-none");
             // reset form
             form.reset();
             console.log("Success!", response);
