--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       padding-top: 130px;
       position: relative;
       overflow: hidden;
-      background: url('https://www.google.com/url?sa=t&source=web&rct=j&url=https%3A%2F%2Fwallpaperbat.com%2Fdevelopment-wallpapers&ved=0CBYQjRxqFwoTCKDX1IWY4pIDFQAAAAAdAAAAABBG&opi=89978449') center/cover no-repeat fixed;
+      background: url('https://www.google.com/url?sa=t&source=web&rct=j&url=https%3A%2F%2Fwww.vecteezy.com%2Ffree-photos%2Fweb-developer-background&ved=0CBYQjRxqGAoTCNCs8Yqi4pIDFQAAAAAdAAAAABDKAQ&opi=89978449') center/cover no-repeat fixed;
     }
     .hero::before {
       content: '';
