--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       display: inline-block;
     }
 
-    /* HERO with parallax (modern tech background) */
+    /* HERO with parallax */
     .hero {
       min-height: 100vh;
       display: flex;
@@ -279,7 +279,6 @@
       animation: scroll-left 40s linear infinite;
     }
 
-    /* Pause on hover */
     .marquee-row:hover .marquee-content {
       animation-play-state: paused;
     }
@@ -294,7 +293,6 @@
       100% { transform: translateX(0); }
     }
 
-    /* skill cards (reuse dari style sebelumnya) */
     .skill-card {
       background: #1b2637;
       border: 1px solid #31465c;
@@ -361,7 +359,7 @@
       border-bottom: 1px dotted;
     }
 
-    /* GALLERY gambar coding/tech stabil */
+    /* gallery */
     .gallery-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -422,7 +420,25 @@
       font-weight: 700;
       font-size: 1.1rem;
       cursor: pointer;
+      display: inline-flex;
+      align-items: center;
+      gap: 0.5rem;
+      transition: 0.3s;
     }
+    .submit-btn:disabled {
+      opacity: 0.7;
+      cursor: not-allowed;
+    }
+    .spinner {
+      width: 1.2rem;
+      height: 1.2rem;
+      border: 2px solid #ffffff;
+      border-top-color: transparent;
+      border-radius: 50%;
+      animation: spin 0.8s linear infinite;
+      display: inline-block;
+    }
+    @keyframes spin { to { transform: rotate(360deg); } }
     .contact-info {
       flex: 1;
       background: #182235;
@@ -438,6 +454,30 @@
     }
     .social-links a { color: #98aec6; }
     .social-links a:hover { color: #3b82f6; }
+
+    /* toast notification */
+    .toast {
+      position: fixed;
+      bottom: 2rem;
+      right: 2rem;
+      background: #1e293b;
+      border-left: 5px solid #3b82f6;
+      padding: 1rem 1.5rem;
+      border-radius: 12px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+      transform: translateX(150%);
+      transition: transform 0.3s ease;
+      z-index: 9999;
+    }
+    .toast.show { transform: translateX(0); }
+    .toast.success { border-left-color: #10b981; }
+    .toast.error { border-left-color: #ef4444; }
+    .toast i { font-size: 1.5rem; }
+    .toast.success i { color: #10b981; }
+    .toast.error i { color: #ef4444; }
 
     footer {
       text-align: center;
@@ -466,7 +506,6 @@
     <div class="hamburger" id="hamburger"><i class="fas fa-bars"></i></div>
   </nav>
 
-  <!-- HERO -->
   <section id="home" class="hero">
     <div class="hero-content" data-aos="fade-up" data-aos-duration="1200">
       <div class="avatar-wrapper">
@@ -482,7 +521,6 @@
     </div>
   </section>
 
-  <!-- About + Pengalaman -->
   <section id="about" class="about">
     <h2 class="section-title" data-aos="fade-right">/ tentang saya</h2>
     <div class="about-grid">
@@ -508,15 +546,11 @@
     </div>
   </section>
 
-  <!-- SKILLS: dua baris infinite scroll (kanan & kiri) -->
   <section id="skills">
     <h2 class="section-title" data-aos="fade-right">/ keahlian inti</h2>
     <div class="skills-marquee">
-      <!-- Baris pertama: slide ke kanan (gerak ke kiri secara visual) -->
       <div class="marquee-row marquee-right">
         <div class="marquee-content">
-          <!-- Daftar skill lengkap (18 item) + duplikasi untuk seamless loop -->
-          <!-- Set 1 -->
           <div class="skill-card"><i class="fab fa-php"></i> PHP</div>
           <div class="skill-card"><i class="fab fa-html5"></i> HTML</div>
           <div class="skill-card"><i class="fab fa-css3-alt"></i> CSS</div>
@@ -535,7 +569,6 @@
           <div class="skill-card"><i class="fas fa-leaf"></i> CI 3</div>
           <div class="skill-card"><i class="fab fa-bootstrap"></i> Bootstrap</div>
           <div class="skill-card"><i class="fas fa-paint-brush"></i> Corel Draw</div>
-          <!-- Set 2 (duplikat) -->
           <div class="skill-card"><i class="fab fa-php"></i> PHP</div>
           <div class="skill-card"><i class="fab fa-html5"></i> HTML</div>
           <div class="skill-card"><i class="fab fa-css3-alt"></i> CSS</div>
@@ -556,10 +589,8 @@
           <div class="skill-card"><i class="fas fa-paint-brush"></i> Corel Draw</div>
         </div>
       </div>
-      <!-- Baris kedua: slide ke kiri (gerak ke kanan secara visual) -->
       <div class="marquee-row marquee-left">
         <div class="marquee-content">
-          <!-- Set 1 -->
           <div class="skill-card"><i class="fab fa-php"></i> PHP</div>
           <div class="skill-card"><i class="fab fa-html5"></i> HTML</div>
           <div class="skill-card"><i class="fab fa-css3-alt"></i> CSS</div>
@@ -578,7 +609,6 @@
           <div class="skill-card"><i class="fas fa-leaf"></i> CI 3</div>
           <div class="skill-card"><i class="fab fa-bootstrap"></i> Bootstrap</div>
           <div class="skill-card"><i class="fas fa-paint-brush"></i> Corel Draw</div>
-          <!-- Set 2 (duplikat) -->
           <div class="skill-card"><i class="fab fa-php"></i> PHP</div>
           <div class="skill-card"><i class="fab fa-html5"></i> HTML</div>
           <div class="skill-card"><i class="fab fa-css3-alt"></i> CSS</div>
@@ -602,7 +632,6 @@
     </div>
   </section>
 
-  <!-- PROJECTS -->
   <section id="projects">
     <h2 class="section-title" data-aos="fade-right">/ projek saya</h2>
     <div class="projects-grid">
@@ -645,28 +674,26 @@
     </div>
   </section>
 
-  <!-- GALLERY -->
   <section id="gallery">
     <h2 class="section-title" data-aos="fade-right">/ gallery</h2>
     <div class="gallery-grid">
-      <div class="gallery-item"><img src="./kuliner.PNG" alt="coding setup" loading="lazy"></div>
-      <div class="gallery-item"><img src="./tiket.PNG" alt="terminal" loading="lazy"></div>
-      <div class="gallery-item"><img src="./donasi.PNG" alt="code closeup" loading="lazy"></div>
-      <div class="gallery-item"><img src="./bengkel.PNG" alt="desktop setup" loading="lazy"></div>
-      <div class="gallery-item"><img src="./kasir.PNG" alt="javascript code" loading="lazy"></div>
+      <div class="gallery-item"><img src="./kuliner.PNG" alt="kuliner" loading="lazy"></div>
+      <div class="gallery-item"><img src="./tiket.PNG" alt="tiket" loading="lazy"></div>
+      <div class="gallery-item"><img src="./donasi.PNG" alt="donasi" loading="lazy"></div>
+      <div class="gallery-item"><img src="./bengkel.PNG" alt="bengkel" loading="lazy"></div>
+      <div class="gallery-item"><img src="./kasir.PNG" alt="kasir" loading="lazy"></div>
     </div>
   </section>
 
-  <!-- CONTACT -->
   <section id="contact">
     <h2 class="section-title" data-aos="fade-right">/ kontak saya</h2>
     <div class="contact-container">
       <div class="contact-form" data-aos="fade-up">
-        <form name="my-portfolio-contact">
-          <div class="form-group"><input type="text" placeholder="Nama" id="username" name="username"></div>
-          <div class="form-group"><input type="email" placeholder="Email" id="email" name="email"></div>
-          <div class="form-group"><textarea rows="4" placeholder="Pesan..." name="message" id="message"></textarea></div>
-          <button type="submit" class="submit-btn btn-send"><i class="fas fa-paper-plane"></i> Kirim</button>
+        <form name="my-portfolio-contact" id="contactForm">
+          <div class="form-group"><input type="text" placeholder="Nama" id="username" name="username" required></div>
+          <div class="form-group"><input type="email" placeholder="Email" id="email" name="email" required></div>
+          <div class="form-group"><textarea rows="4" placeholder="Pesan..." name="message" id="message" required></textarea></div>
+          <button type="submit" class="submit-btn btn-send" id="submitBtn"><span>Kirim</span></button>
         </form>
       </div>
       <div class="contact-info" data-aos="fade-left">
@@ -687,6 +714,11 @@
     <p>© 2025 Ahmad Husain Ardiansyah — web developer portfolio, built with modern stack.</p>
   </footer>
 
+  <div class="toast" id="toast">
+    <i class="fas" id="toastIcon"></i>
+    <span id="toastMessage"></span>
+  </div>
+
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
     AOS.init({ duration: 1000, once: true, offset: 80 });
@@ -704,21 +736,45 @@
 
     const scriptURL = "https://script.google.com/macros/s/AKfycbwqplUxSjvwnIsq02vtjCnsuPstgbTT_Xj4HDsNK5RjZhkKppSnC37V6LSbIpS66F0/exec";
     const form = document.forms["my-portfolio-contact"];
-    const btnSend = document.querySelector(".btn-send");
+    const submitBtn = document.getElementById('submitBtn');
+    const toast = document.getElementById('toast');
+    const toastIcon = document.getElementById('toastIcon');
+    const toastMessage = document.getElementById('toastMessage');
+
+    function showToast(message, isSuccess) {
+      toast.classList.remove('success', 'error');
+      toast.classList.add(isSuccess ? 'success' : 'error');
+      toastIcon.className = isSuccess ? 'fas fa-check-circle' : 'fas fa-exclamation-circle';
+      toastMessage.textContent = message;
+      toast.classList.add('show');
+      setTimeout(() => toast.classList.remove('show'), 3000);
+    }
 
     form.addEventListener("submit", (e) => {
       e.preventDefault();
-      btnSend.classList.toggle("d-none"); // asumsi ada class d-none, sebaiknya tambahkan style .d-none { display: none; }
+      if (submitBtn.disabled) return;
+      const originalText = submitBtn.innerHTML;
+      submitBtn.disabled = true;
+      submitBtn.innerHTML = '<span class="spinner"></span> Mengirim...';
+
       fetch(scriptURL, { method: "POST", body: new FormData(form) })
-        .then((response) => {
-          btnSend.classList.toggle("d-none");
-          form.reset();
-          console.log("Success!", response);
+        .then(response => {
+          if (response.ok) {
+            showToast('Pesan berhasil dikirim! Terima kasih.', true);
+            form.reset();
+          } else {
+            showToast('Gagal mengirim. Coba lagi.', false);
+          }
         })
-        .catch((error) => console.error("Error!", error.message));
+        .catch(error => {
+          console.error('Error:', error);
+          showToast('Terjadi kesalahan jaringan.', false);
+        })
+        .finally(() => {
+          submitBtn.disabled = false;
+          submitBtn.innerHTML = originalText;
+        });
     });
   </script>
-  <!-- tambahan style untuk d-none jika belum ada -->
-  <style>.d-none { display: none; }</style>
 </body>
 </html>
