--- a/index.html
+++ b/index.html
@@ -209,10 +209,57 @@
       flex-wrap: wrap;
       font-size: 1.1rem;
       color: #b0caf0;
+      margin-bottom: 2.5rem;
     }
     .hero-meta i {
       color: #3b82f6;
       margin-right: 8px;
+    }
+    .button-group {
+      display: flex;
+      gap: 1.5rem;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+    .cta-btn {
+      background: linear-gradient(45deg, #3b82f6, #9333ea);
+      border: none;
+      color: white;
+      padding: 1rem 2.8rem;
+      border-radius: 60px;
+      font-size: 1.2rem;
+      font-weight: 600;
+      cursor: pointer;
+      transition: 0.3s;
+      box-shadow: 0 10px 30px #3b82f650;
+      text-decoration: none;
+      display: inline-flex;
+      align-items: center;
+      gap: 0.5rem;
+    }
+    .cta-btn:hover {
+      transform: scale(1.05);
+      box-shadow: 0 20px 40px #3b82f6b0;
+    }
+    .download-btn {
+      background: transparent;
+      border: 2px solid #3b82f6;
+      color: #3b82f6;
+      padding: 1rem 2.8rem;
+      border-radius: 60px;
+      font-size: 1.2rem;
+      font-weight: 600;
+      cursor: pointer;
+      transition: 0.3s;
+      text-decoration: none;
+      display: inline-flex;
+      align-items: center;
+      gap: 0.5rem;
+    }
+    .download-btn:hover {
+      background: #3b82f6;
+      color: white;
+      box-shadow: 0 0 30px #3b82f6;
     }
 
     /* about */
@@ -517,6 +564,10 @@
         <span><i class="fas fa-calendar-alt"></i> Jakarta, 2 Mei 1998</span>
         <span><i class="fas fa-map-pin"></i> Magelang / Remote</span>
         <span><i class="fas fa-code"></i> 15+ skill siap</span>
+      </div>
+      <div class="button-group">
+        <button class="cta-btn" onclick="document.getElementById('projects').scrollIntoView({behavior:'smooth'})"><i class="fas fa-arrow-right"></i> Lihat Projek</button>
+        <a href="./cv.pdf" download class="download-btn"><i class="fas fa-download"></i> Download CV</a>
       </div>
     </div>
   </section>
